--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ jobs:
         go-version: [1.18]
     runs-on: ubuntu-latest
     steps:
-      - name: Setup Go
+      - name: Set up Go
         uses: actions/setup-go@v3
         with:
           go-version: ${{matrix.go-version}}
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Run tests
+      - name: Run Tests
         run: go test -v ./...
 
   race:
@@ -28,7 +28,7 @@ jobs:
     needs:
       - test
     steps:
-      - name: Setup Go
+      - name: Set up Go
         uses: actions/setup-go@v3
         with:
           go-version: ${{matrix.go-version}}
@@ -36,7 +36,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Run race condition tests
+      - name: Run Race Detector
         run: go test -race -shuffle=on ./... 
 
   coverage:
@@ -47,7 +47,7 @@ jobs:
     needs:
       - test
     steps:
-      - name: Setup Go
+      - name: Set up Go
         uses: actions/setup-go@v3
         with:
           go-version: ${{matrix.go-version}}
@@ -55,8 +55,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Run coverage tests
+      - name: Run Coverage Tests
         run: go test -cover -coverprofile=coverage.txt ./...
 
-      - name: Upload report to Codecov
+      - name: Upload Report to Codecov
         uses: codecov/codecov-action@v3
+        with:
+          files: coverage.txt
