--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,64 +1,53 @@
 name: Tests
-
 on: push
-
 jobs:
   test:
-    strategy:
-      matrix:
-        go-version: [1.18]
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v4
         with:
-          go-version: ${{matrix.go-version}}
-
+          go-version: '1.20'
       - name: Checkout
         uses: actions/checkout@v3
-
+      - name: Build CI Tool
+        working-directory: ./ci
+        run: go build
       - name: Run Tests
-        run: go test -v ./...
-
+        run: ./ci/ci test
   race:
-    strategy:
-      matrix:
-        go-version: [1.18]
     runs-on: ubuntu-latest
     needs:
       - test
     steps:
       - name: Set up Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v4
         with:
-          go-version: ${{matrix.go-version}}
-
+          go-version: '1.20'
       - name: Checkout
         uses: actions/checkout@v3
-
+      - name: Build CI Tool
+        working-directory: ./ci
+        run: go build
       - name: Run Race Detector
-        run: go test -race -shuffle=on ./... 
-
+        run: ./ci/ci test --race
   coverage:
-    strategy:
-      matrix:
-        go-version: [1.18]
     runs-on: ubuntu-latest
     needs:
       - test
     steps:
       - name: Set up Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v4
         with:
-          go-version: ${{matrix.go-version}}
-
+          go-version: '1.20'
       - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Run Coverage Tests
-        run: go test -cover -coverprofile=coverage.txt ./...
-
+      - name: Build CI Tool
+        working-directory: ./ci
+        run: go build
+      - name: Run Coverage Reporter
+        run: ./ci/ci test --cover
       - name: Upload Report to Codecov
         uses: codecov/codecov-action@v3
         with:
-          files: coverage.txt
+          files: results/cover.out
