--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,19 +1,19 @@
 name: Build
 on: push
+permissions:
+  contents: read
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Fetch all tags
-        run: git fetch --force --tags
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.20'
-      - name: Build CI Tool
+          go-version: "1.20"
+      - name: Build CI tool
         working-directory: ./ci
         run: go build
-      - name: Run Build Pipeline
+      - name: Run build pipeline
         run: ./ci/ci build --strip
