--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,5 +1,7 @@
 name: Linting
 on: push
+permissions:
+  contents: read
 jobs:
   golangci-lint:
     runs-on: ubuntu-latest
@@ -8,3 +10,5 @@ jobs:
         uses: actions/checkout@v3
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v3
+        with:
+          version: v1.52
