--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -29,8 +29,8 @@ archives:
     - goos: windows
       format: zip
 # Also bundle sources
-source:
-  enabled: true
+#source:
+#  enabled: true
 # Creates SBOMs of all archives and the source tarball using syft
 # https://goreleaser.com/customization/sbom
 sboms:
