--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,12 +22,14 @@ jobs:
         with:
           go-version: "1.20"
           check-latest: true
-      - name: Build CI tool
-        working-directory: ./ci
-        run: go build
-      - name: Run release pipeline
+      - uses: sigstore/cosign-installer@v3 # installs cosign
+      - uses: anchore/sbom-action/download-syft@v0.14.1 # installs syft
+      - name: Run GoReleaser
         id: release-pipeline
-        run: ./ci/ci release
+        uses: goreleaser/goreleaser-action@v4
+        with:
+          version: latest
+          args: release --clean --snapshot
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Generate subject
