feat: update goreleaser to use goproxy
Signed-off-by: Marvin Drees <marvin.drees@9elements.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -2,6 +2,23 @@
 before:
   hooks:
     - go mod tidy
+gomod:
+  # Proxy a module from proxy.golang.org, making the builds verifiable.
+  # This will only be effective if running against a tag. Snapshots will ignore
+  # this setting.
+  # Notice: for this to work your `build.main` must be a package, not a `.go` file.
+  proxy: true
+  # If proxy is true, use these environment variables when running `go mod`
+  # commands (namely, `go mod tidy`).
+  #
+  # Default: `os.Environ()` merged with what you set the root `env` section.
+  env:
+    - GOPROXY=https://proxy.golang.org,direct
+    - GOSUMDB=sum.golang.org
+  # Sets the `-mod` flag value.
+  #
+  # Since: v1.7
+  mod: mod
 # Build for all first-class targets
 builds:
   - env: ["CGO_ENABLED=0"]
@@ -45,14 +62,17 @@ changelog:
   sort: asc
   filters:
     exclude:
-      - '^docs:'
+      - '^chore:'
       - '^test:'
   groups:
     - title: 'New Features'
       regexp: "^.*feat[(\\w)]*:+.*$"
-      order: 0
+      order: 100
     - title: 'Bug fixes'
       regexp: "^.*fix[(\\w)]*:+.*$"
-      order: 1
+      order: 200
+    - title: "Documentation updates"
+      regexp: "^.*docs[(\\w)]*:+.*$"
+      order: 400
     - title: 'Other work'
       order: 999
