--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,16 @@
 name: Build
-on: push
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
+    branches:
+     - master
 permissions:
   contents: read
 jobs:
@@ -11,9 +22,15 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: "1.20"
-      - name: Build CI tool
-        working-directory: ./ci
-        run: go build
-      - name: Run build pipeline
-        run: ./ci/ci build --strip
+          go-version: "1.21"
+          check-latest: true
+      - name: Run Build-Pipeline
+        uses: dagger/dagger-for-github@v5
+        with:
+          verb: run
+          args: go run ci/main.go -cmd "go build -o output/ -buildmode=pie ./cmd/example/main.go"
+          version: "0.9.3"
+      - uses: actions/upload-artifact@v3
+        with:
+          name: build-artifact
+          path: output
