--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,10 +20,12 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: "1.20"
+          go-version: "1.21"
           check-latest: true
-      - uses: sigstore/cosign-installer@v3 # installs cosign
-      - uses: anchore/sbom-action/download-syft@v0.14.3 # installs syft
+      - name: Install Cosign
+        uses: sigstore/cosign-installer@v3
+      - name: Install Syft
+        uses: anchore/sbom-action/download-syft@v0.15.0
       - name: Run GoReleaser
         id: release-pipeline
         uses: goreleaser/goreleaser-action@v5
