--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,55 +1,72 @@
 name: Tests
-on: push
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
+    branches:
+     - master
 permissions:
   contents: read
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: "1.20"
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Build CI tool
-        working-directory: ./ci
-        run: go build
-      - name: Run tests
-        run: ./ci/ci test
+          go-version: "1.21"
+          check-latest: true
+      - name: Run Test-Pipeline
+        uses: dagger/dagger-for-github@v5
+        with:
+          verb: run
+          args: go run ci/main.go -cmd "go test -shuffle=on ./..."
+          version: "0.9.3"
   race:
     runs-on: ubuntu-latest
     needs:
       - test
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: "1.20"
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Build CI tool
-        working-directory: ./ci
-        run: go build
-      - name: Run race condition detector
-        run: ./ci/ci test --race
+          go-version: "1.21"
+          check-latest: true
+      - name: Run Race-Condition-Pipeline
+        uses: dagger/dagger-for-github@v5
+        with:
+          verb: run
+          args: go run ci/main.go -cmd "go test -shuffle=on -race ./..."
+          version: "0.9.3"
   coverage:
     runs-on: ubuntu-latest
     needs:
       - test
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: "1.20"
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Build CI tool
-        working-directory: ./ci
-        run: go build
-      - name: Run coverage reporter
-        run: ./ci/ci test --cover
+          go-version: "1.21"
+          check-latest: true
+      - name: Run Coverage-Pipeline
+        uses: dagger/dagger-for-github@v5
+        with:
+          verb: run
+          args: go run ci/main.go -cmd "go test -shuffle=on -cover -covermode=atomic -coverpkg=./... -coverprofile=output/coverage.txt ./..."
+          version: "0.9.3"
       - name: Upload report to Codecov
         uses: codecov/codecov-action@v3
         with:
-          files: results/cover.out
+          files: output/coverage.txt
