--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -21,7 +21,9 @@ gomod:
   mod: mod
 # Build for all first-class targets
 builds:
-  - env: ["CGO_ENABLED=0"]
+  - main: ./cmd/example
+    binary: example
+    env: ["CGO_ENABLED=0"]
     goos: ["linux", "windows", "darwin"]
     flags: ["-trimpath"]
     ldflags: ["-s -w"]
