ci: improve release firmware-action v3
Signed-off-by: AtomicFS <vojtech.vesely@9elements.com>

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,11 +1,10 @@
 name: Build-FA
 on:
-  release:
-    types: ['released']
   pull_request:
   merge_group:
   push:
     branches: ['main']
+    tags: ['v*']
 
 permissions:
   contents: read
